[gd_scene load_steps=29 format=2]

[ext_resource path="res://player/Player.gd" type="Script" id=1]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-idle-00.png" type="Texture" id=2]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-idle-01.png" type="Texture" id=3]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-idle-02.png" type="Texture" id=4]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-idle-03.png" type="Texture" id=5]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-00.png" type="Texture" id=6]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-01.png" type="Texture" id=7]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-02.png" type="Texture" id=8]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-03.png" type="Texture" id=9]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-04.png" type="Texture" id=10]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-run-05.png" type="Texture" id=11]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-00.png" type="Texture" id=12]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-01.png" type="Texture" id=13]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-02.png" type="Texture" id=14]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-03.png" type="Texture" id=15]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-04.png" type="Texture" id=16]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-attack2-05.png" type="Texture" id=17]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-crnr-jmp-00.png" type="Texture" id=18]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-crnr-jmp-01.png" type="Texture" id=19]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-fall-00.png" type="Texture" id=20]
[ext_resource path="res://player/Adventurer-1.5/Individual Sprites/adventurer-fall-01.png" type="Texture" id=21]
[ext_resource path="res://player/FSM.gd" type="Script" id=22]
[ext_resource path="res://player/IdleState.gd" type="Script" id=23]
[ext_resource path="res://player/RunState.gd" type="Script" id=24]
[ext_resource path="res://player/JumpState.gd" type="Script" id=25]
[ext_resource path="res://player/FallState.gd" type="Script" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "attack-2",
"speed": 7.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 32.8897
height = 19.061

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.76802, 14.3484 )
shape = SubResource( 2 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 22 )

[node name="IdleState" type="Node" parent="FSM"]
script = ExtResource( 23 )

[node name="RunState" type="Node" parent="FSM"]
script = ExtResource( 24 )

[node name="JumpState" type="Node" parent="FSM"]
script = ExtResource( 25 )

[node name="FallState" type="Node" parent="FSM"]
script = ExtResource( 26 )
